Fix: selected item not showing up in Safari
It also handles auto selecting when an element is focus. E.g: if you tabulate to the next control in the navigable list, you want selection to update accordingly.

--- a/app/assets/stylesheets/terminals.css
+++ b/app/assets/stylesheets/terminals.css
@@ -119,7 +119,7 @@
   }
 
   .terminal__item {
-    &:where(:not(:active)):focus-visible {
+    &:where(:not(:active)):focus-visible, &:where(:not(:active))[aria-current] {
       --btn-color: var(--color-terminal-bg);
 
       background: var(--color-terminal-text);
